# BluetoothDevices

./: .gitignore  Cargo.toml  README.md  flake.nix
bluetooth_devices_console/: Cargo.toml
bluetooth_devices_console/src/: main.rs
bluetooth_devices_lib/: Cargo.toml
bluetooth_devices_lib/src/: lib.rs
nix/: shell.nix
